feat: auth setup, swagger docs and handlers only & add: makefile for simple run
